@@ -1,38 +1,0 @@
-$NetBSD: distinfo,v 1.8 2006/09/06 20:38:57 wiz Exp $
-
-SHA1 (dnetc-macosx-ppc.tar.gz) = 3b0dbf859dfdb8a43eec02417f850e3e3439a7d2
-RMD160 (dnetc-macosx-ppc.tar.gz) = 4799b43e12c804c9beb02b117aceb33f2ba99ec7
-Size (dnetc-macosx-ppc.tar.gz) = 199996 bytes
-SHA1 (dnetc-netbsd-alpha-elf.tar.gz) = ebddc524ccbbd9d72031a036ceb320a60c4a9059
-RMD160 (dnetc-netbsd-alpha-elf.tar.gz) = 4e87d2b4c801dc27462be646bc5a0d2986a41a49
-Size (dnetc-netbsd-alpha-elf.tar.gz) = 446179 bytes
-SHA1 (dnetc-netbsd-arm32.tar.gz) = da5f79ea1bc84a1e3a7a5a36c9e77e38ae6f477e
-RMD160 (dnetc-netbsd-arm32.tar.gz) = b45e011fdd0ba86144169f6225a0b6fa7f5665f1
-Size (dnetc-netbsd-arm32.tar.gz) = 190196 bytes
-SHA1 (dnetc-netbsd-m68k-elf.tar.gz) = ca56b4160589c5d979aa84743d5c2ff01db92741
-RMD160 (dnetc-netbsd-m68k-elf.tar.gz) = c7e0fa757624c7467ca8181fce4384ef66cc531f
-Size (dnetc-netbsd-m68k-elf.tar.gz) = 309059 bytes
-SHA1 (dnetc-netbsd-mipsel-elf.tar.gz) = b36de8e26db1c26422f42e80bd65a5e5c3b69531
-RMD160 (dnetc-netbsd-mipsel-elf.tar.gz) = f2206df952213f69f1f32860104bef5584a41031
-Size (dnetc-netbsd-mipsel-elf.tar.gz) = 356877 bytes
-SHA1 (dnetc-netbsd-ppc.tar.gz) = 8357eb4f9cf421313eb606b97542e17c916bcf2b
-RMD160 (dnetc-netbsd-ppc.tar.gz) = 5e0a90ffe424d13922c372445310db10a387b662
-Size (dnetc-netbsd-ppc.tar.gz) = 361974 bytes
-SHA1 (dnetc-netbsd-sparc-elf.tar.gz) = b67f38b83dfef47d86a8e9d3f14da3a8cf55f3e5
-RMD160 (dnetc-netbsd-sparc-elf.tar.gz) = afe3c9df0b75aece36913034df608aa6552d20e3
-Size (dnetc-netbsd-sparc-elf.tar.gz) = 351309 bytes
-SHA1 (dnetc-netbsd-sparc64-elf.tar.gz) = ea9aa72ef8cadd85e8d0e81cdb47f2b9abde1441
-RMD160 (dnetc-netbsd-sparc64-elf.tar.gz) = a57dcd403489d227ed331618b1f73d38de427826
-Size (dnetc-netbsd-sparc64-elf.tar.gz) = 366479 bytes
-SHA1 (dnetc-netbsd-vax.tar.gz) = f69c542548749a647fb7bc17f6be49f78765c5ee
-RMD160 (dnetc-netbsd-vax.tar.gz) = de6942066c2a44faa6835497d69f94ab85ebfc4f
-Size (dnetc-netbsd-vax.tar.gz) = 312478 bytes
-SHA1 (dnetc-netbsd-x86-elf.tar.gz) = 22a1b861ce2b07c1e122fab16aa949b657092d78
-RMD160 (dnetc-netbsd-x86-elf.tar.gz) = 58a547e56f6a505f8853a1c27891aee7651a7f3e
-Size (dnetc-netbsd-x86-elf.tar.gz) = 356367 bytes
-SHA1 (dnetc-solaris26-sparc32.tar.gz) = dd5a764a9c4bd5e1478cef1381add81cfedc3c63
-RMD160 (dnetc-solaris26-sparc32.tar.gz) = 4ccb69f98cbfe6b917bf9762c484019b52ea6249
-Size (dnetc-solaris26-sparc32.tar.gz) = 244325 bytes
-SHA1 (dnetc-solaris7-sparc64.tar.gz) = 407074313385550d8f3f4572c15e09566ad7a8bb
-RMD160 (dnetc-solaris7-sparc64.tar.gz) = a35e07e734e092be6793fe1f04e1bb66260f5cbf
-Size (dnetc-solaris7-sparc64.tar.gz) = 264617 bytes
